fix header problem on mobile

--- a/_sass/custom/site.scss
+++ b/_sass/custom/site.scss
@@ -6,6 +6,9 @@
 
 .post-entry {
   margin-top: 10px;
+}
+
+.post-entry:not(:last-child) {
   margin-bottom: 35px;
 }
 
