--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -5,12 +5,12 @@
 }
 
 main,
-footer,
 .nav-container {
   display: block;
   margin: 0 auto;
   max-width: 800px;
   width: 100%;
+  margin-top: 65px;
 }
 
 .nav {
